--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -427,3 +427,16 @@ body {
   font-size: $type-size-6;
   text-transform: uppercase;
 }
+
+.triple-video {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 12px;
+}
+.triple-video video {
+  width: 100%;
+  height: auto;
+}
+@media (max-width: 900px) {
+  .triple-video { grid-template-columns: 1fr; }
+}
